--- a/custom.css
+++ b/custom.css
@@ -5,8 +5,8 @@
 
 .header {
     width: 100%;
-    height: 100%;
-    background-image: url(../Images/traveling.png);
+    height: 100vh;
+    background-image: url(./Images/traveling.png);
     background-repeat: no-repeat;
     overflow: hidden;
 }
